@@ -18,6 +18,10 @@ libport::hash_map<K, V>, Hash tables.  Relies on either G++'s or MS'.
 We should check for ext/hash_map and hash_map.h instead of relying on
 !Windows.
 
+** indent.hh
+Function objects to implement indented pretty-printing on an ostream.
+See tests/test-indent.cc for examples.
+
 ** singleton-ptr.hh
 Macros STATIC_INSTANCE(Cl, Name), EXTERN_STATIC_INSTANCE(Cl, Name).
 
