@@ -5,6 +5,9 @@ namespace libport
 {
   // hash.hh.
   template<class K, class V>
+  class hash_map;
+  // FIXME: To remove some day.
+  template<class K, class V>
   class hash_map_type;
 
   // lockable.hh.
@@ -16,6 +19,9 @@ namespace libport
   // select-const.hh.
   template <typename T> struct constify_traits;
   template <typename T> struct id_traits;
+
+  // shared-ref.hh.
+  template <typename T> class shared_ref;
 
   // semaphore.hh.
   class Semaphore;
