@@ -5,6 +5,7 @@ check_PROGRAMS =		\
 singleton1			\
 singleton2			\
 test-escape			\
+test-indent			\
 udouble1			\
 ufloat1				\
 ullfp1				\
@@ -13,6 +14,7 @@ ullfptab1
 singleton1_SOURCES =	singleton1.cc
 singleton2_SOURCES =	singleton2.cc
 test_escape_SOURCES =   test-escape.cc ../escape.cc
+test_escape_SOURCES =   test-indent.cc ../indent.cc
 udouble1_SOURCES =	udouble1.cc
 ufloat1_SOURCES =	ufloat1.cc
 ullfp1_SOURCES =	ullfp1.cc
